<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingHorizontal="60dp"
    tools:context=".ui.dashboard.DashboardFragment">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logobrain"
                android:layout_marginTop="15dp"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder_name"
                android:textColor="@color/dusty_rose"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when"
                android:textColor="@color/dusty_rose"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0">

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">

                    <TextView
                        android:layout_width="70dp"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/monday"/>
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/tuesday"/>
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/wednesday"/>
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/thursday"/>
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/friday"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/friday"/>
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/saturday"/>
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/sunday"/>
                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/dusty_rose"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/time"/>
            
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dusty_rose"
                android:text="@string/done"
                android:id="@+id/done"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"/>


        </LinearLayout>

    </ScrollView>




</LinearLayout>